--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="fifty_dp">50dp</dimen>
     <string name="use_app_tip">
-        本软件为开源免费软件，任何收费购买途径均为假冒！！！\n\n
         使   用   说   明：\n
         ①.在输入框填入单次需要增加的步数\n
         ②.点击立即增加按钮\n\n
@@ -21,9 +20,11 @@
         作者：XyLin\n
         邮箱：android.xylin@foxmail.com\n\n
         使   用   须   知：\n
-        本软件仅供个人测试使用，不能用于任何商业及非法用途。请您不要在法律的边缘试探，出现任何后果请自行承担！！！\n
+        本软件仅供个人测试使用，不能用于任何商业及非法用途。\n
+        请您不要在法律的边缘试探，出现任何后果请自行承担！！！\n
         程序如有侵权，请联系本人进行删除。
     </string>
-    <string name="toast_add_steps_failed">增加步数失败，具体原因为</string>
+    <string name="toast_add_steps_failed">增加步数失败</string>
     <string name="toast_add_steps_success">增加指定步数成功</string>
+    <string name="btn_ok">确定</string>
 </resources>
