调整开始时间为延迟10分钟(即每日00:10开始即可进行步数添加)--1912301214

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
         邮箱：android.xylin@foxmail.com\n\n
         使   用   须   知：\n
         本软件仅供个人测试使用，不能用于任何商业及非法用途。\n
-        请您不要在法律的边缘试探，出现任何后果请自行承担！！！\n
+        请您不要在法律的边缘试探，出现任何后果请自行承担！\n
         程序如有侵权，请联系本人进行删除。
     </string>
     <string name="toast_add_steps_failed">增加步数失败</string>
