--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">小米步数管理</string>
     <string name="text_today_steps">今日步数：%d</string>
     <string name="text_add_steps">增加步数：</string>
-    <string name="text_add_steps_hint">请输入需要增加的步数</string>
+    <string name="text_add_steps_hint">请输入需要增加的步数(可为负数)</string>
     <string name="toast_exit_app">再按一次退出程序</string>
     <string name="btn_add_step">立即增加</string>
     <dimen name="text_size">16sp</dimen>
@@ -10,35 +10,36 @@
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="fifty_dp">50dp</dimen>
     <string name="use_app_tip">
-        使   用   说   明：\n
-        ①.在输入框填入单次需要增加的步数\n
+        使   用 说 明：\n
+        ①.填入单次需要增加的步数(可为负数)\n
         ②.点击立即增加按钮\n\n
-        如何判断是否增加成功？\n
+        判断是否增加成功\n
         ①.观察是否弹出增加步数成功提示\n
         ②.小米负一屏(信息助手)查看步数\n\n
-        开   发   者   信   息：\n
+        开  发  者  信  息：\n
         作者：XyLin\n
         邮箱：android.xylin@foxmail.com\n\n
         使   用   须   知：\n
-        本软件仅供个人测试使用，不能用于任何商业及非法用途。\n
-        请您不要在法律的边缘试探，出现任何后果请自行承担！\n
-        程序如有侵权，请联系本人进行删除。
+        程序仅供个人测试使用，不得用于任何商业及非法用途\n
+        不要在法律的边缘试探，出现任何后果请自行承担\n
+        程序如有侵权，请联系本人进行删除
     </string>
     <string name="toast_add_steps_failed">增加步数失败</string>
-    <string name="dialog_message_error">出现异常，请将该对话框截图并反馈给开发者。\n%s</string>
-    <string name="dialog_message_int_parser_error">您输入的不是一个有效数值，请检查输入是否正确！</string>
+    <string name="dialog_message_error">出现异常，请将该对话框截图并反馈给开发者\n%s</string>
+    <string name="dialog_message_int_parser_error">您输入的不是一个有效数值，请检查输入是否正确</string>
     <string name="dialog_message_add_step_security_error">
-        增加步数失败，未能获取写入步数权限\n
-        请核心破解手机后重试，也可尝试转换为系统应用\n
-        注意：\n
-        转换系统应用一旦成功就会自动重启手机\n
+        未能成功写入步数，请核心破解手机后重试\n
+        若核心破解后亦无法增加的，请尝试转换为系统应用\n
+        注      意：\n
+        转换系统应用需要ROOT权限\n
+        转换成功后会自动重启手机\n
         由重启导致的数据损失开发者不负任何责任\n
         请确认您没有数据需要进行保存
     </string>
     <string name="toast_add_steps_success">增加指定步数成功</string>
     <string name="btn_ok">确定</string>
     <string name="btn_convert_sys_app">转换为系统应用</string>
-    <string name="toast_no_root">设备未ROOT或未授予APP访问ROOT权限</string>
-    <string name="toast_convert_syst_app_fail">转换失败，可能未解锁System分区或者其它问题</string>
+    <string name="toast_no_root">设备未ROOT或未授予应用ROOT权限</string>
+    <string name="toast_convert_sys_app_fail">转换失败，未解锁System分区或者其它问题</string>
     <string name="toast_convert_sys_app_success">转换系统APP成功</string>
 </resources>
