--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,39 +14,42 @@
         ①.填入单次需要增加的步数(可为负数)\n
         ②.点击立即增加按钮\n\n
         判断是否增加成功\n
-        ①.观察是否弹出增加步数成功提示\n
+        ①.观察点击按钮后弹出的提示\n
         ②.小米负一屏(信息助手)查看步数\n\n
+    </string>
+    <string name="dialog_message_int_parser_error">您输入的不是一个有效数值，请检查输入是否正确</string>
+    <string name="about_app">
         开  发  者  信  息：\n
         作者：XyLin\n
         邮箱：android.xylin@foxmail.com\n\n
         使   用   须   知：\n
-        程序仅供个人测试使用，不得用于任何商业及非法用途\n
+        程序仅供个人测试使用，禁止用于商业及非法用途\n
         不要在法律的边缘试探，出现任何后果请自行承担\n
         程序如有侵权，请联系本人进行删除
     </string>
-    <string name="toast_add_steps_failed">增加步数失败</string>
-    <string name="dialog_message_error">出现异常，请将该对话框截图并反馈给开发者\n%s</string>
-    <string name="dialog_message_int_parser_error">您输入的不是一个有效数值，请检查输入是否正确</string>
-    <string name="security_error_rom">
-        已是系统应用，但无法增加步数\n
-        请尝试对应用进行卸载更新操作\n
-        应用详情(信息)->卸载更新->确定\n
-        如还是无法增加，请刷入官改或放弃使用\n
-        程序给您带来不便，敬请谅解
+    <string name="work_mode_description">
+        切换工作模式：\n
+        菜单显示的是当前工作模式\n
+        点击工作模式将按照①->③循环切换\n
+        模式切换后需重启APP生效\n\n
+        工作模式列表：\n
+        ①.核心破解模式(默认模式)\n
+        ②.ROOT权限模式\n
+        ③.系统洗白模式\n\n
+        工作模式介绍：\n
+        核心破解模式：只有手机核心破解后才能使用（部分手机可直接使用）\n\n
+        ROOT权限模式：依赖ROOT权限进行增加步数，需授予程序ROOT权限\n\n
+        系统洗白模式：将程序转换为系统应用（成功后会自动重启手机。该模式需要ROOT，那为什么不直接用ROOT模式......）
     </string>
-    <string name="security_convert_sys_app">
-        也可尝试转换为系统应用\n
-        注      意：\n
-        转换系统应用需要ROOT权限\n
-        转换成功后会自动重启手机\n
-        重启导致的数据损失开发者不负任何责任\n
-        请确认您没有数据需要进行保存
-    </string>
-    <string name="dialog_message_add_step_security_error">未能成功写入步数，请核心破解手机后重试\n\n%s</string>
+    <string name="add_step_error_core">默认模式添加步数失败，请核心破解手机后重试</string>
+    <string name="add_step_error_root">ROOT模式添加步数失败，请确认授予了程序ROOT权限</string>
+    <string name="add_step_error_system">系统洗白模式添加步数失败，请尝试切换工作模式</string>
+    <string name="convert_system_app_fail">转换系统应用失败了，请切换工作模式</string>
     <string name="toast_add_steps_success">增加指定步数成功</string>
     <string name="btn_ok">确定</string>
-    <string name="btn_convert_sys_app">转换为系统应用</string>
-    <string name="toast_no_root">设备未ROOT或未授予应用ROOT权限</string>
     <string name="toast_convert_sys_app_fail">转换失败，未解锁System分区或者其它问题</string>
     <string name="toast_convert_sys_app_success">转换系统APP成功</string>
+    <string name="menu_title_about_app">关于程序</string>
+    <string name="menu_uninstall_app">卸载应用</string>
+    <string name="menu_work_mode_description">模式详解</string>
 </resources>
