--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,34 @@
 <resources>
     <string name="app_name">小米步数管理</string>
-    <string name="text_today_steps">今日步数：%d</string>
+    <string name="add_step_error_core">默认模式添加步数失败，请切换模式或核心破解手机后重试</string>
+    <string name="add_step_error_root">ROOT模式添加步数失败，请确认授予了程序ROOT权限且/system/xbin/文件夹存在sqlite3文件</string>
+    <string name="add_step_error_system">系统洗白模式添加步数失败，请尝试切换工作模式，切换模式之前请通过菜单卸载程序</string>
+    <string name="btn_add_step">立即增加步数</string>
+    <string name="btn_ok">确定</string>
+    <string name="convert_system_app_fail">转换系统应用失败了，请切换工作模式</string>
+    <string name="copy_sqlite_file_fail">复制sqlite3文件到/system/xbin/目录出现错误，请确认授予了程序ROOT权限（部分手机可能还需要解锁System分区）</string>
+    <string name="dialog_message_int_parser_error">您输入的不是一个有效数值，请检查输入是否正确</string>
+    <string name="menu_title_about_app">关于程序</string>
+    <string name="menu_uninstall_app">卸载应用</string>
+    <string name="menu_work_mode_description">模式详解</string>
     <string name="text_add_steps">增加步数：</string>
     <string name="text_add_steps_hint">请输入需要增加的步数(可为负数)</string>
     <string name="toast_exit_app">再按一次退出程序</string>
-    <string name="btn_add_step">立即增加</string>
-    <dimen name="text_size">16sp</dimen>
-    <dimen name="five_dp">5dp</dimen>
-    <dimen name="ten_dp">10dp</dimen>
-    <dimen name="fifty_dp">50dp</dimen>
+    <string name="toast_add_steps_success">增加指定步数成功</string>
+    <string name="uninstall_system_app_fail">卸载应用失败了，请手动进入/system/app(priv-app)/文件夹删除StepManage.apk</string>
+    <string name="unzip_sqlite_file_fail">释放sqlite3文件到缓存目录失败</string>
+    <string name="about_app">
+        开  发  者  信  息：\n
+        作者：XyLin\n
+        邮箱：android.xylin@foxmail.com\n\n
+        Sqlite3下载源：\n
+        https://github.com/tech128/sqlite3\n
+        下载并使用了sqlite3.armv7和sqlite3.armv7-pie\n\n
+        使   用   须   知：\n
+        程序仅供个人测试，禁用商业及非法用途\n
+        勿在法律边缘试探，任何后果请自行承担\n
+        程序如有侵权，请联系本人进行删除
+    </string>
     <string name="use_app_tip">
         使   用   说   明：\n
         ①.填入单次需要增加的步数(可为负数)\n
@@ -16,40 +36,27 @@
         判断是否增加成功\n
         ①.观察点击按钮后弹出的提示\n
         ②.小米负一屏(信息助手)查看步数\n\n
-    </string>
-    <string name="dialog_message_int_parser_error">您输入的不是一个有效数值，请检查输入是否正确</string>
-    <string name="about_app">
-        开  发  者  信  息：\n
-        作者：XyLin\n
-        邮箱：android.xylin@foxmail.com\n\n
-        使   用   须   知：\n
-        程序仅供个人测试使用，禁止用于商业及非法用途\n
-        不要在法律的边缘试探，出现任何后果请自行承担\n
-        程序如有侵权，请联系本人进行删除
+        自动修改说明：\n
+        开启开关时自动保存增加步数信息\n
+        每天第一次打开APP时会自动修改\n
+        修改完成会自动退出
     </string>
     <string name="work_mode_description">
         切换工作模式：\n
-        菜单显示的是当前工作模式\n
-        点击工作模式将按照①->③循环切换\n
-        模式切换后需重启APP生效\n\n
-        工作模式列表：\n
+        菜单显示为当前模式\n
+        点击模式将按照①->③循环切换\n
+        模式列表：\n
         ①.核心破解模式(默认模式)\n
         ②.ROOT权限模式\n
         ③.系统洗白模式\n\n
-        工作模式介绍：\n
-        核心破解模式：只有手机核心破解后才能使用（部分手机可直接使用）\n\n
-        ROOT权限模式：依赖ROOT权限进行增加步数，需授予程序ROOT权限\n\n
-        系统洗白模式：将程序转换为系统应用（成功后会自动重启手机。该模式需要ROOT，那为什么不直接用ROOT模式......）
+        模式介绍：\n
+        核心破解：只有手机核心破解后才能使用（部分手机可直接使用）\n\n
+        ROOT权限：依赖ROOT权限和Sqlite3命令进行增加步数，需授予程序ROOT权限\n\n
+        系统洗白：将程序转换为系统应用以获取写入步数权限，转换时需要ROOT权限，增加步数时不需要
     </string>
-    <string name="add_step_error_core">默认模式添加步数失败，请核心破解手机后重试</string>
-    <string name="add_step_error_root">ROOT模式添加步数失败，请确认授予了程序ROOT权限</string>
-    <string name="add_step_error_system">系统洗白模式添加步数失败，请尝试切换工作模式</string>
-    <string name="convert_system_app_fail">转换系统应用失败了，请切换工作模式</string>
-    <string name="toast_add_steps_success">增加指定步数成功</string>
-    <string name="btn_ok">确定</string>
-    <string name="toast_convert_sys_app_fail">转换失败，未解锁System分区或者其它问题</string>
-    <string name="toast_convert_sys_app_success">转换系统APP成功</string>
-    <string name="menu_title_about_app">关于程序</string>
-    <string name="menu_uninstall_app">卸载应用</string>
-    <string name="menu_work_mode_description">模式详解</string>
+    <string name="text_new_day_auto_add_step">每天第一次打开时自动修改</string>
+    <dimen name="five_dp">5dp</dimen>
+    <dimen name="fifty_dp">50dp</dimen>
+    <dimen name="text_size">16sp</dimen>
+    <dimen name="ten_dp">10dp</dimen>
 </resources>
